enum Level {
  EASY,
  GOOD,
  HARD,
  FORGOTTEN,
}
